# docs/swagger.json
@@ -36,6 +36,12 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by status (in-progress or done)",
+                        "name": "status",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -526,11 +532,11 @@
         "helper.ErrResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "integer"
-                },
                 "message": {
                     "type": "string"
+                },
+                "statusCode": {
+                    "type": "integer"
                 }
             }
         },
@@ -593,6 +599,9 @@
                 "video_game_id"
             ],
             "properties": {
+                "duration_month": {
+                    "type": "integer"
+                },
                 "video_game_id": {
                     "type": "number"
                 }
